--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "devDependencies": {
     "mocha": "^10.2.0",
     "standard": "^17.1.0"
+  },
+  "dependencies": {
+    "basic-args": "^1.3.0",
+    "dumb-csv": "^1.1.1",
+    "google-polyline": "^1.0.3"
   }
 }
