--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "basic-args": "^1.3.0",
     "dumb-csv": "^1.1.1",
-    "google-polyline": "^1.0.3"
+    "google-polyline": "^1.0.3",
+    "json-stringify-pretty-compact": "^3.0.0"
   }
 }
